Adding media query for RWD

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
           </div>
         </div>
 
+        <div class="navigation_icon navigation_icon-bars">
+          <i class="fa-solid fa-bars"></i>
+        </div>
         <div class="navigation_icon navigation_icon-search">
           <i class="fa fa-search fa-flip-horizontal"></i>
         </div>
